c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/dot_no_left_expr.c
int main(void) {
    return .a;  // a dot operator can only appear after an expression
}